# datascience_cats_dogs_MobileNetV2

./: .gitignore  README.md  Reconhecimento_Facial.ipynb  cats_dogs_MobileNetV2.ipynb  image_to_grayscale.ipynb  metricas_de_avaliacao.ipynb
analyze_vulnerabilities/: readme.md
analyze_vulnerabilities/module-1/01-introducao-backend/: main.py  requirements.txt
food_recomendation/: pre_process.py  predict.py  pyproject.toml  train_infer.py
pln_automation/: main.py  pyproject.toml  speech_to_text.py  text_to_speech.py
tdd_ai_agent/: pyproject.toml
tdd_ai_agent/src/tdd_ai_agent/: __init__.py  agent.py  main.py  script_to_test.py  utils.py
yolo_classification/: main.py  pyproject.toml
yolo_classification/scripts/: check_arquivos.py  convert_voc_to_yolo.py  detect_torch.py  main.py  main_webcam.py  test_webcam.py  train_torch.py
